// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTab props append is rendered 1`] = `
<button
  aria-selected="false"
  class="euiTab emotion-euiTab"
  role="tab"
  type="button"
>
  <span
    class="euiTab__prepend"
  >
    Append
  </span>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    children
  </span>
</button>
`;

exports[`EuiTab props disabled and selected 1`] = `
<button
  aria-selected="true"
  class="euiTab euiTab-isSelected emotion-euiTab-disabled-selected"
  disabled=""
  role="tab"
  type="button"
>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    Click Me
  </span>
</button>
`;

exports[`EuiTab props disabled is rendered 1`] = `
<button
  aria-selected="false"
  class="euiTab emotion-euiTab-disabled"
  disabled=""
  role="tab"
  type="button"
>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    Click Me
  </span>
</button>
`;

exports[`EuiTab props href renders anchor 1`] = `
<a
  aria-label="aria-label"
  aria-selected="false"
  class="euiTab testClass1 testClass2 emotion-euiTab-euiTestCss"
  data-test-subj="test subject string"
  href="/baz/bing"
  rel="noreferrer"
  role="tab"
>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    children
  </span>
</a>
`;

exports[`EuiTab props isSelected is rendered 1`] = `
<button
  aria-selected="true"
  class="euiTab euiTab-isSelected emotion-euiTab-selected"
  role="tab"
  type="button"
>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    children
  </span>
</button>
`;

exports[`EuiTab props onClick renders button 1`] = `
<button
  aria-label="aria-label"
  aria-selected="false"
  class="euiTab testClass1 testClass2 emotion-euiTab-euiTestCss"
  data-test-subj="test subject string"
  role="tab"
  type="button"
>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    children
  </span>
</button>
`;

exports[`EuiTab props prepend is rendered 1`] = `
<button
  aria-selected="false"
  class="euiTab emotion-euiTab"
  role="tab"
  type="button"
>
  <span
    class="euiTab__prepend"
  >
    Prepend
  </span>
  <span
    class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
  >
    children
  </span>
</button>
`;
